crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_singles_class.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q001 [*] Single quote multiline found but double quotes preferred
 --> docstring_singles_class.py:3:5
  |
1 | class SingleLineDocstrings():
2 |     ''' Double quotes single line class docstring '''
3 |     ''' Not a docstring '''
  |     ^^^^^^^^^^^^^^^^^^^^^^^
4 |
5 |     def foo(self, bar='''not a docstring'''):
  |
help: Replace single multiline quotes with double quotes
  |
3 -     ''' Not a docstring '''
3 +     """ Not a docstring """
  |

Q001 [*] Single quote multiline found but double quotes preferred
 --> docstring_singles_class.py:5:23
  |
3 |     ''' Not a docstring '''
4 |
5 |     def foo(self, bar='''not a docstring'''):
  |                       ^^^^^^^^^^^^^^^^^^^^^
6 |         ''' Double quotes single line method docstring'''
7 |         pass
  |
help: Replace single multiline quotes with double quotes
  |
5 -     def foo(self, bar='''not a docstring'''):
5 +     def foo(self, bar="""not a docstring"""):
  |
