crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_singles_module_singleline.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q001 [*] Single quote multiline found but double quotes preferred
 --> docstring_singles_module_singleline.py:2:1
  |
1 | ''' Double quotes singleline module docstring '''
2 | ''' this is not a docstring '''
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 |
4 | def foo():
  |
help: Replace single multiline quotes with double quotes
  |
2 - ''' this is not a docstring '''
2 + """ this is not a docstring """
  |

Q001 [*] Single quote multiline found but double quotes preferred
 --> docstring_singles_module_singleline.py:6:1
  |
4 | def foo():
5 |     pass
6 | ''' this is not a docstring '''
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace single multiline quotes with double quotes
  |
6 - ''' this is not a docstring '''
6 + """ this is not a docstring """
  |
