crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_doubles_over_singles_implicit.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q000 [*] Single quotes found but double quotes preferred
 --> singles_implicit.py:2:5
  |
1 | x = (
2 |     'This'
  |     ^^^^^^
3 |     'is'
4 |     'not'
  |
help: Replace single quotes with double quotes
  |
2 -     'This'
2 +     "This"
  |

Q000 [*] Single quotes found but double quotes preferred
 --> singles_implicit.py:3:5
  |
1 | x = (
2 |     'This'
3 |     'is'
  |     ^^^^
4 |     'not'
5 | )
  |
help: Replace single quotes with double quotes
  |
3 -     'is'
3 +     "is"
  |

Q000 [*] Single quotes found but double quotes preferred
 --> singles_implicit.py:4:5
  |
2 |     'This'
3 |     'is'
4 |     'not'
  |     ^^^^^
5 | )
  |
help: Replace single quotes with double quotes
  |
4 -     'not'
4 +     "not"
  |

Q000 [*] Single quotes found but double quotes preferred
  --> singles_implicit.py:8:5
   |
 7 | x = (
 8 |     'This' \
   |     ^^^^^^
 9 |     'is' \
10 |     'not'
   |
help: Replace single quotes with double quotes
  |
8 -     'This' \
8 +     "This" \
  |

Q000 [*] Single quotes found but double quotes preferred
  --> singles_implicit.py:9:5
   |
 7 | x = (
 8 |     'This' \
 9 |     'is' \
   |     ^^^^
10 |     'not'
11 | )
   |
help: Replace single quotes with double quotes
  |
9 -     'is' \
9 +     "is" \
  |

Q000 [*] Single quotes found but double quotes preferred
  --> singles_implicit.py:10:5
   |
 8 |     'This' \
 9 |     'is' \
10 |     'not'
   |     ^^^^^
11 | )
   |
help: Replace single quotes with double quotes
   |
10 -     'not'
10 +     "not"
   |

Q000 [*] Single quotes found but double quotes preferred
  --> singles_implicit.py:27:1
   |
25 | if True:
26 |     'This can use "single" quotes'
27 | 'But this needs to be changed'
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace single quotes with double quotes
   |
27 - 'But this needs to be changed'
27 + "But this needs to be changed"
   |
